public enum CharacterEnum
{
    None,
    Player,
    Ayane,
    Hoshino,
    Shiroko,
    Nonomi,
    Serika,
}

public enum ProductEnum
{
    Credit,
    Bullet,
    Equipment = 10,
    Equipment_HG,
    Equipment_AR,
    Equipment_SG,
    Equipment_MG,
    Equipment_Throw,
    Equipment_Shield,
    Equipment_Extra,
    Item = 100,
    Plant = 1000,
}

public enum PersonalCameraPosition
{
    Back,
    Front,
    Up,
}

public enum Direction
{
    Up,
    Dowm,
    Left,
    Right,
}

public enum ActionCode
{
    OnAction0,
    OnAction1,
    OnAction2,
    OnAction3,
    OnAction4,
    OnAction5,
    OnAction6,
    OnAction7,
    OnAction8,
    OnAction9,
}